# conway-polynomials

./: .gitignore  COPYING  MANIFEST.in  NEWS  README.rst  pyproject.toml  setup.py
.github/workflows/: dist.yml
src/conway_polynomials/: __init__.py
