[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conway-polynomials"
version = "0.8"
description = "Python interface to Frank Lübeck's Conway polynomial database"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["mathematics", "algebra", "Conway polynomials"]
license = { file = "COPYING" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/sagemath/conway-polynomials"
Documentation = "https://github.com/sagemath/conway-polynomials/blob/master/README.rst"
Repository = "https://github.com/sagemath/conway-polynomials.git"
Issues = "https://github.com/sagemath/conway-polynomials/issues"
Changelog = "https://github.com/sagemath/conway-polynomials/raw/master/NEWS"
